--- a/code/app/index.html
+++ b/code/app/index.html
@@ -11,18 +11,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <h1>TransparentUSG</h1>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-    <li><a href="#/view3">view3</a></li>
-    <li><a href="#/view4">view4</a></li>
-    <li><a href="#/view5">view5</a></li>
-  </ul>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="text-center">
+                    TransparentUSG
+                </h3>
+                <ul class="nav nav-pills">
+
+                    <li>
+                        <a href="#/view1">View 1</a>
+                    </li>
+
+                    <li>
+                        <a href="#/view2">View 2</a>
+                    </li>
+
+                    <li>
+                        <a href="#/view3">View 3</a>
+                    </li>
+
+                    <li>
+                        <a href="#/view4">View 4</a>
+                    </li>
+
+                    <li>
+                        <a href="#/view5">View 5</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -35,6 +61,7 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/bootstrap-css/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
